Refactor necesidad y asignacion